--- a/main/templates/runways_page.html
+++ b/main/templates/runways_page.html
@@ -5,8 +5,7 @@
     <h2>Runway Details: {{ runway_data.id }}</h2>
     <table class="table">
         <tr><th>ID</th><td>{{ runway_data.id }}</td></tr>
-        <tr><th>Airport Ref</th><td><a href="/airport/{{ runway_data.airport_ref }}" class="highlighted-cell">{{ runway_data.airport_ref }}</a></td></tr>
-        <tr><th>Airport Ident</th><td>{{ runway_data.airport_ident }}</td></tr>
+        <tr><th>Airport</th><td><a href="{% url 'airport_details' airport_id=runway_data.airport %}" class="highlighted-cell">{{ runway_data.airport_label }}</a></td></tr>
         <tr><th>Length (ft)</th><td>{{ runway_data.length_ft }}</td></tr>
         <tr><th>Width (ft)</th><td>{{ runway_data.width_ft }}</td></tr>
         <tr><th>Surface</th><td>{{ runway_data.surface }}</td></tr>
