--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                 </ul>
 
                 <!-- Search Bar inside the navbar with input-group -->
-                <form class="form-inline search-bar" action="{% url 'results' %}" method="get">
+                <form class="form-inline search-bar" action="{% url 'results_view' %}" method="get">
                     <div class="input-group w-100">
                         <input class="form-control" type="search" name="query" placeholder="Search" aria-label="Search">
                         <div class="input-group-append">
