--- a/main/templates/regions_page.html
+++ b/main/templates/regions_page.html
@@ -8,9 +8,7 @@
         <tr><th>Code</th><td>{{ region_data.code }}</td></tr>
         <tr><th>Local Code</th><td>{{ region_data.local_code }}</td></tr>
         <tr><th>Name</th><td>{{ region_data.name }}</td></tr>
-        <tr><th>Continent</th><td><a href="/continent/{{ region_data.continent }}" class="highlighted-cell">{{ region_data.continent }}</a></td></tr>
-        <tr><th>ISO Country</th><td><a href="/country/{{ region_data.iso_country }}" class="highlighted-cell">{{ region_data.iso_country }}</a></td></tr>
-        <tr><th>Airports</th><td><a href="/airports/{{ region_data.airports }}" class="highlighted-cell">{{ region_data.airports }}</a></td></tr>
+        <tr><th>ISO Country</th><td><a href="/countries/{{ region_data.iso_country }}" class="highlighted-cell">{{ region_data.country_label }}</a></td></tr>
     </table>
 </div>
 {% endblock %}
