--- a/main/templates/countries_page.html
+++ b/main/templates/countries_page.html
@@ -17,7 +17,7 @@
     <table class="table">
         <tr><th>Code</th><td>{{ country_data.code }}</td></tr>
         <tr><th>Name</th><td>{{ country_data.name }}</td></tr>
-        <tr><th>Continent</th><td><a href="/continent/{{ country_data.continent }}" class="highlighted-cell">{{ country_data.continent }}</a></td></tr>
+        <tr><th>Continent</th><td>{{ country_data.continent }}</td></tr>
         <!-- For Airports -->
         <tr>
             <th>Airports</th>
