--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,12 @@
     <title>{{ page.title }}</title>
     <!-- Bootstrap CDN for styling -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    
     <!-- Custom styles for Wikipedia-like appearance -->
     <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script> 
+    
 
     <style>
         /* Custom style for search bar */
@@ -17,6 +21,64 @@
             width: 50%; /* Make the search bar take up half the screen width */
             margin: 0 auto; /* Center the search bar */
         }
+        .search-box{
+            width: fit-content;
+            height: fit-content;
+            position: relative;
+            margin: 0 auto;
+        }
+        .input-search{
+            height: 50px;
+            width: 50px;
+            border-style: none;
+            padding: 10px;
+            font-size: 18px;
+            letter-spacing: 2px;
+            outline: none;
+            border-radius: 25px;
+            transition: all .5s ease-in-out;
+            background-color: #ffffff;
+            padding-right: 40px;
+            color:#000000;
+        }
+        .input-search::placeholder{
+            color:rgba(0, 0, 0, 0.8);
+            font-size: 18px;
+            letter-spacing: 2px;
+            font-weight: 100;
+        }
+        .btn-search{
+            width: 50px; /* Increased width */
+            height: 50px; /* Increased height */
+            border-style: none;
+            font-size: 20px;
+            font-weight: bold;
+            outline: none;
+            cursor: pointer;
+            border-radius: 50%;
+            position: absolute;
+            right: 0px;
+            color:#000000 ;
+            background-color:transparent;
+            pointer-events: painted;  
+        }
+        .btn-search:focus ~ .input-search{
+            width: 300px;
+            border-radius: 0px;
+            background-color: transparent;
+            border-bottom:1px solid rgba(255,255,255,.5);
+            transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+        }
+        .input-search:focus{
+            width: 300px;
+            border-radius: 0px;
+            background-color: transparent;
+            border-bottom:1px solid rgba(255,255,255,.5);
+            transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+        }
+
+
+
     </style>
 </head>
 <body>
@@ -40,11 +102,12 @@
 
                 <!-- Search Bar inside the navbar with input-group -->
                 <form class="form-inline search-bar" action="{% url 'results_view' %}" method="get">
-                    <div class="input-group w-100">
-                        <input class="form-control" type="search" name="query" placeholder="Search" aria-label="Search">
-                        <div class="input-group-append">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </div>
+
+                    <div class="search-box" style="display: flex; justify-content: center; margin-bottom: 20px;">
+                        <button class="btn-search"><i class="fa fa-search"></i></button>
+                        <input type="text" class="input-search" placeholder="Type to Search...">
+                    </div>
+                    </div>
                     </div>
                 </form>
             </div>
@@ -70,5 +133,5 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
+    
 </html>
