kalau ada yang rusak, disini gw mulai ganti cssnya

--- a/main/templates/countries_page.html
+++ b/main/templates/countries_page.html
@@ -68,7 +68,7 @@
         </tr>
         
         
-        <tr><th>Region is Contained In</th><td><a href="/region/{{ country_data.region_is_contained_in_label }}" class="highlighted-cell">{{ country_data.region_is_contained_in_label }}</a></td></tr>
+        <tr><th>Region is Contained In</th><td>{{ country_data.region_is_contained_in_label }}</td></tr>
         <tr><th>Population</th><td>{{ country_data.population }}</td></tr>
         <tr><th>Area</th><td>{{ country_data.area }}</td></tr>
         <tr><th>Population Density</th><td>{{ country_data.pop_density }}</td></tr>
