add all countries page

--- a/templates/base.html
+++ b/templates/base.html
@@ -106,18 +106,11 @@
 
                             <!-- Countries Section -->
                             <div class="dropdown-item-group">
-                                <a href="#" class="dropdown-item">
+                                <a href="{% url 'all_countries' %}" class="dropdown-item">
                                     <i class="fa fa-flag text-success"></i> Countries
                                 </a>
                             </div>
-                            <div class="dropdown-divider"></div>
 
-                            <!-- Regions Section -->
-                            <div class="dropdown-item-group">
-                                <a href="#" class="dropdown-item">
-                                    <i class="fa fa-map text-warning"></i> Regions
-                                </a>
-                            </div>
                         </div>
                     </li>
 
