--- a/main/templates/all_airports.html
+++ b/main/templates/all_airports.html
@@ -8,7 +8,7 @@
     <form method="get" class="form-inline mb-4">
         <!-- Country Filter -->
         <label for="countryFilter" class="mr-2">Filter by Country:</label>
-        <select id="countryFilter" name="country" class="form-control mr-2" onchange="this.form.submit()">
+        <select id="countryFilter" name="country" class="form-control mr-2" onchange="goToPage1(this.form)">
             <option value="">-- All Countries --</option>
             {% for country in countries %}
                 <option value="{{ country }}" {% if country == selected_country %}selected{% endif %}>
@@ -19,7 +19,7 @@
     
         <!-- Sort By -->
         <label for="sortBy" class="ml-4 mr-2">Sort by:</label>
-        <select id="sortBy" name="sort" class="form-control mr-2" onchange="this.form.submit()">
+        <select id="sortBy" name="sort" class="form-control mr-2" onchange="goToPage1(this.form)">
             <option value="default" {% if sort_by == "default" %}selected{% endif %}>Default (Unsorted)</option>
             <option value="label_asc" {% if sort_by == "label_asc" %}selected{% endif %}>Airport Name (A-Z)</option>
             <option value="label_desc" {% if sort_by == "label_desc" %}selected{% endif %}>Airport Name (Z-A)</option>
@@ -29,15 +29,15 @@
     
         <!-- Items Per Page -->
         <label for="itemsPerPage" class="ml-4 mr-2">Show:</label>
-        <select id="itemsPerPage" name="items_per_page" class="form-control mr-2" onchange="this.form.submit()">
+        <select id="itemsPerPage" name="items_per_page" class="form-control mr-2" onchange="goToPage1(this.form)">
             <option value="10" {% if items_per_page == 10 %}selected{% endif %}>10</option>
             <option value="25" {% if items_per_page == 25 %}selected{% endif %}>25</option>
             <option value="50" {% if items_per_page == 50 %}selected{% endif %}>50</option>
         </select>
         airports per page
-    
-        <!-- Retain Current Page -->
-        <input type="hidden" name="airport_page" value="{{ airports_page.number }}">
+
+        <!-- Reset to Page 1 -->
+        <input type="hidden" name="airport_page" value="1">
     </form>
 
     <!-- Results Info -->
@@ -88,4 +88,17 @@
         </div>
     </div>
 </div>
+
+<!-- JavaScript for Redirecting to Page 1 -->
+<script>
+    function goToPage1(form) {
+        // Explicitly set the page parameter to 1 before submitting
+        const input = document.createElement('input');
+        input.type = 'hidden';
+        input.name = 'airport_page';
+        input.value = '1';
+        form.appendChild(input);
+        form.submit();
+    }
+</script>
 {% endblock %}
